* fix spotbug
* remove demo package
* fixed issue of merger judgement in the BaseService
* fixed issue of avoid throwing null pointer exception 
* fixed the message of verify exception
* fixed the need to specify byte encoding format in Test use cases
* fixed String.toLowerCase encoding format problem in BeanUtil
* remove methods not used in BeanUtil
* fixed the problem of redundant null judgment in BeanUtil
* fixed immutable variables requires constant design
* fixed static object initialization multithreading problem
* fixed the use case failures in TestVerifyEvidence
* filtering spotbug problems casused by mock
* fixed spotbug problems for known empty objects
* remove useless schema constants after CPT modification
* fixed the problem of not using Integer.valueOf to construct Integer
objects in EvidenceServiceImpl